--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ p {
     </style>
 </head>
 <body>
+    <nav>
+  <a href="index.html">Home</a> |
+  <a href="motivation.html">Motivation</a> |
+  <a href="study-tips.html">Study Tips</a> |
+  <a href="about.html">About</a> |
+  <a href="contact.html">Contact</a>
+</nav>
+<hr>
+
 
 <div class="box">
     <h2>Student Motivation 💡</h2>
@@ -137,3 +146,4 @@ p {
 
 </body>
 </html>
+
